[package]
name = "advent-of-code"
authors = ["Robin Toncourt<robin.toncourt@gmail.com>"]
description = "Solution des défis d'Advent of Code."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
regex = "1.10.4"
serde_json = "1.0.116"
